--- a/src/Ecoffe.Frontend/src/app/views/home/home.component.html
+++ b/src/Ecoffe.Frontend/src/app/views/home/home.component.html
@@ -33,15 +33,15 @@
 <mat-card>
     <section class="Container">
         <div>
-            <img mat-card-image src="../../../assets/img4.png" alt="img produto mais votado" class="imagem">
+            <img mat-card-image (click)="abre_mod()" src="../../../assets/img4.png" alt="img produto mais votado" class="imagem">
             <p>Titulo produto</p>
         </div>
         <div>
-            <img mat-card-image src="../../../assets/img5.png" alt="img produto mais votado" class="imagem">
+            <img mat-card-image (click)="abre_mod()" src="../../../assets/img5.png" alt="img produto mais votado" class="imagem">
             <p>Titulo produto</p>
         </div>
         <div>
-            <img mat-card-image src="../../../assets/img6.png" alt="img produto mais votado" class="imagem">
+            <img mat-card-image (click)="abre_mod()" src="../../../assets/img6.png" alt="img produto mais votado" class="imagem">
             <p>Titulo produto</p>
         </div>
 
