--- a/src/Ecoffe.Frontend/src/app/components/products-details/products-details.component.css
+++ b/src/Ecoffe.Frontend/src/app/components/products-details/products-details.component.css
@@ -1,3 +1,4 @@
+/*
 .CentralDiv{
     display: flex;
     flex-wrap: wrap;
@@ -22,4 +23,36 @@
 
 #quebraLinha{
     width: 150px;
+}
+*/
+.products{
+    display: inline-flex;
+    flex-flow: wrap;
+
+    height: 180px;
+    width: 200px;
+    margin: 10px;
+}
+
+.product{
+    height: 180px;
+    width: 200px;
+    margin: 10px;
+   
+}
+
+.wrapperImg{
+    text-align: center;
+}
+
+.wrapperImg > img{
+    height: 100px;
+    width: auto;
+}
+
+button{
+    margin: 10px;
+}
+.align{
+    text-align: center;
 }
